--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "ts-node src/index.ts",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seeds.ts"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -17,6 +20,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "axios": "^1.6.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
     "prisma": "^5.6.0",
